syntax = "proto3";
package todopackage;

message CreateTodoRequest {
    string text = 1;    
}

message TodoItem {
    string id = 1;
    string text = 2;
    bool done = 3;
}

message TodoItems {
    repeated TodoItem items = 1;
}